37-aws-eks/k8s-files/aws-cli-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aws-cli
  namespace: production
spec:
  serviceAccountName: aws-cli-service-account
  containers:
  - name: aws-cli
    image: amazon/aws-cli
    command: ["sleep", "infinity"]
