37-aws-eks/k8s-files/ebs-test-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ebs-test-nginx-pod
spec:
  containers:
  - name: app
    image: nginx:stable-alpine
    ports:
    - containerPort: 80
    volumeMounts:
    - name: ebs-storage
      mountPath: /data
  volumes:
  - name: ebs-storage
    persistentVolumeClaim:
      claimName: ebs-test-pvc
