37-aws-eks/k8s-files/mysql-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless-service
  labels:
    app.kubernetes.io/component: mysql
spec:
  clusterIP: None   # headless service, no load balancing
  ports:
    - port: 3306
      targetPort: mysql
      name: mysql
  selector:
    app.kubernetes.io/component: mysql
